@@ -1,0 +1,9 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::Callback::PemPasswd : interface_t {
+  use Net::SSLeay;
+  
+  required method : int ($buf : mutable string, $size : int, $rwflag : int, $arg : object);
+  
+}
