@@ -2,5 +2,8 @@
 # MIT License
 
 class Net::SSLeay::Callback::TlsextStatus : interface_t {
+  use Net::SSLeay;
+  
+  required method : int ($ssl : Net::SSLeay, $arg : object);
   
 }
